--- a/docs/other/2024-07-07-23-25-48-idea-bei-fen.md
+++ b/docs/other/2024-07-07-23-25-48-idea-bei-fen.md
@@ -8,7 +8,7 @@ authors:
   image_url: https://img.zbus.top/zbus/logo.jpg
 ---
 <!-- truncate -->  
-
+vue3+ts使用 prism不生效解决方案（vue3集成 prism代码高亮显示）
 ## idea激活码
 
 记录一下日常的 idea 备用激活码。
