--- a/docs/09-linux/2024-07-04-23-59-35-linux常用命令.md
+++ b/docs/09-linux/2024-07-04-23-59-35-linux常用命令.md
@@ -47,3 +47,27 @@ alias glog="git log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%
 这样，我们在命令行就可以通过 glog 命令来快速查看提交记录。
 
 ![image-20240705000353420](https://img.zbus.top/zbus/blog202407050003451.png)
+
+## 设置 vim 高亮显示和自动行号
+
+在开发的过程中，我们经常用到 vim，但是它没有一些行号和高亮显示，我们可以通过下面的命令来解决这个问题。
+
+```bash
+# 进入到当前的用户目录
+cd ~/ 
+# 使用 vim 编辑 .vimrc 文件
+vim .vimrc
+```
+在 `.vimrc` 中添加如下内容
+
+```bash
+syntax on
+set number
+```
+
+保存之后退出，再次使用 vim 打开的时候就是如下的样式了，
+
+![image-20240708002911272](https://img.zbus.top/zbus/blog202407080029296.png)
+
+> **注意:**
+> `.vimrc` 只是针对的是当前用户生效，如果想要让全局生效，需要在 `/etc/vimrc` 中添加。
