--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -21,7 +21,7 @@ import Comments from "../components/Comments";
 为什么要快？作为 90 后，或许在这些年，真的没有想好自己想要什么，想得到什么和做什么？所以想要自己能够快步成长，找到自己一个明确的目标，奋勇向前。
 
 ### 为什么又是Z不殊的小站？
-Z不殊，就是不服，不输，不走殊途。
+Z不殊，Z 是姓，周的首字母，不殊，寓意不特殊，平平凡凡，而又不服，不输，不走殊途。
 就是不服，不服命运，不服自己的处境，不服自己不会！
 
 别人能做到的，自己也一定能行，所以，不管怎样，都要相信自己。对我来说，真的，除了健康，一切都是可有可无的，你只需要按照你的想法去活。工作，生活，可能真的会磨灭你很多的稚气。但仍然请你保持你的初心，一生那么多，多要做点自己喜欢做的事情。
@@ -34,7 +34,7 @@ Z不殊，就是不服，不输，不走殊途。
 
 不想再做过多的折腾，从今天开始，好好输出自己的博客，无论是技术，还是生活。
 
-zbus 最初构建于 docusaurus ，并在 docusaurus 上遇到了很多有趣的朋友，有时候博客的存在只是为了记录，写博客，可以让自己梳理清自己想要表达什么，记录日常的所想，日常的知识盲区。本站点构建于 Halo 博客，主要用于日常的笔记和相关吐糟，有任何问题欢迎留言。
+zbus 最初构建于 docusaurus ，并在 docusaurus 上遇到了很多有趣的朋友，有时候博客的存在只是为了记录，写博客，可以让自己梳理清自己想要表达什么，记录日常的所想，日常的知识盲区，也会有一些相关吐糟，有任何问题欢迎留言。
 
 2024 年 6 月，瞎折腾，还是觉得 docusaurus 的博客风格，更好一点，所以，我决定将这个站点迁移到 docusaurus 上， 并为自己的 docusaurus 网站添加一些自己的东西。
 希望在这个站点，能够存在长一点。
