--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,6 +5,6 @@ title: 介绍
 
 # 文档总结类
 
-![Z不殊](https://img.zbus.top/zbus/blog202406040032944.webp)
+![Z不殊](./images/blog202406040032944.webp)
 
 在这里主要记录平时自己的一些学习和总结，欢迎大家观看和查阅，如果有任何信息错误，欢迎大家联系作者修改和完善。
